# lamb

./: Makefile  NOTES.md  README.md  default.nix  lamb.cabal  lamb.nix  shell.nix  stack.yaml  test.lam
c-bits/: gc.c  gc.h  main.c  types.c  types.h
lib/Language/Lamb/: AST.hs  Checker.hs  Normalizer.hs  Parser.hs  Renamer.hs  Runner.hs  Types.hs  UX.hs  Utils.hs
lib/Language/Lamb/CG/: Asm.hs  C.hs  Compiler.hs
tests/: Common.hs  Test.hs  adder.json  anf.json  boa.json  cobra.json  diamondback.json  dynamic.json  egg.json  fox.json  static.json
tests/input/: dyn3.fox  dyn4.fox  gc-0.fox  gc-1.fox  gc-2.fox  gc-3.fox  gc-copy-0.fox  gc-copy-1.fox  gc-fun-0.fox  gc-fun-1.fox  list-0.fox  list-1.fox  list-2.fox  list-3.fox  list-4.fox  list-full.fox  lists.fox  tmp.fox  tuple-00.fox  tuple-01.fox  tuple-02.fox  tuple-03.fox  tuple-04.fox
